replace base64 encoder/decoder